--- a/src/styles/team-list.scss
+++ b/src/styles/team-list.scss
@@ -12,7 +12,7 @@
 
   &-link {
     display: inline-flex;
-    width: 250px;
+    width: 230px;
     position: relative;
 
     &::before,
@@ -25,7 +25,7 @@
       width: 100%;
       height: 100%;
       position: absolute;
-      background-color: pink;
+      background: color(intro);
       display: block;
       right: 10px;
       bottom: 10px;
